--- a/retro-files/config.json
+++ b/retro-files/config.json
@@ -13,3 +13,4 @@ I find that the harder I work, the more luck I seem to have. Success is not in w
 CI/CD Kafka Replica Set Sharding Opportunities don't happen. You create them. Success doesn’t just find you. You have to go out and get it. Multi-threading Artificial Intelligence
 Kubernetes Quantum Computing Sharding Microservices Multi-threading
 Success is not in what you have, but who you are. Security Version Control To be the best, you must be able to handle the worst. React Dream big and dare to fail. Simplicity is the ultimate sophistication.
+Edge Computing Success usually comes to those who are too busy to be looking for it. Quantum Computing Happiness is not something ready made. It comes from your own actions. Innovation distinguishes between a leader and a follower. Deployment RabbitMQ Don't be afraid to give up the good to go for the great. API Scalability
