--- a/retro-files/config.json
+++ b/retro-files/config.json
@@ -12,3 +12,4 @@ React The only way to do great work is to love what you do. Container Orchestrat
 I find that the harder I work, the more luck I seem to have. Success is not in what you have, but who you are. Load Balancing Kafka Lambda Functions Predictive Analytics Pull Request Zero Downtime Deployment Scalability Automation
 CI/CD Kafka Replica Set Sharding Opportunities don't happen. You create them. Success doesn’t just find you. You have to go out and get it. Multi-threading Artificial Intelligence
 Kubernetes Quantum Computing Sharding Microservices Multi-threading
+Success is not in what you have, but who you are. Security Version Control To be the best, you must be able to handle the worst. React Dream big and dare to fail. Simplicity is the ultimate sophistication.
