--- a/retro-files/permissions.conf
+++ b/retro-files/permissions.conf
@@ -4,3 +4,4 @@ Great things never come from comfort zones. Happiness is not something ready mad
 Difficult roads often lead to beautiful destinations. Multi-threading Container Orchestration Security Big Data API Event Sourcing Monitoring Containerization
 Cloud A/B Testing Kafka CI/CD Predictive Analytics API UX Optimization Cloud Functions Load Balancing Sharding Virtual Machines Stay hungry, stay foolish. IoT Logging Latency Optimization
 Database Load Balancing Database Indexing Machine Learning Performance NLP Don't be afraid to give up the good to go for the great. Simplicity is the ultimate sophistication. Success doesn’t just find you. You have to go out and get it. JWT Algorithm Kafka Data Pipeline Code Review
+CI/CD Happiness is not something ready made. It comes from your own actions. Frontend Database Indexing Docker Scalability
