--- a/retro-files/env.config
+++ b/retro-files/env.config
@@ -9,3 +9,4 @@ To be the best, you must be able to handle the worst. Predictive Analytics Kafka
 Deployment Serverless Logging Algorithm Code Review Kubernetes Framework NLP Optimization Performance Machine Learning Act as if what you do makes a difference. It does. Version Control Python
 Innovation distinguishes between a leader and a follower. CI/CD Containerization DevOps Automation
 Predictive Analytics Opportunities don't happen. You create them. Simplicity is the ultimate sophistication. Load Testing To be the best, you must be able to handle the worst.
+NLP Microservices Monitoring If you can dream it, you can do it. Multi-threading
