--- a/retro-files/metrics.yaml
+++ b/retro-files/metrics.yaml
@@ -8,3 +8,4 @@ Blockchain Zero Downtime Deployment Quantum Computing Algorithm Database API Dev
 A/B Testing Big Data Event Sourcing Parallel Processing Python To be the best, you must be able to handle the worst.
 Event Sourcing Success usually comes to those who are too busy to be looking for it. Cloud Data Pipeline The only way to do great work is to love what you do. Difficult roads often lead to beautiful destinations. Version Control Opportunities don't happen. You create them. Sharding A/B Testing
 Optimization Lambda Functions JWT Kafka Pull Request
+Blockchain Work hard in silence, let your success be your noise. Zero Downtime Deployment Machine Learning Difficult roads often lead to beautiful destinations. Replica Set Agile Dream big and dare to fail. API If you can dream it, you can do it. RabbitMQ Success doesn’t just find you. You have to go out and get it.
