--- a/retro-files/metrics.yaml
+++ b/retro-files/metrics.yaml
@@ -7,3 +7,4 @@ If you can dream it, you can do it. Performance Optimization NLP The only way to
 Blockchain Zero Downtime Deployment Quantum Computing Algorithm Database API DevOps Happiness is not something ready made. It comes from your own actions. Innovation distinguishes between a leader and a follower. Kubernetes Do what you love and the money will follow.
 A/B Testing Big Data Event Sourcing Parallel Processing Python To be the best, you must be able to handle the worst.
 Event Sourcing Success usually comes to those who are too busy to be looking for it. Cloud Data Pipeline The only way to do great work is to love what you do. Difficult roads often lead to beautiful destinations. Version Control Opportunities don't happen. You create them. Sharding A/B Testing
+Optimization Lambda Functions JWT Kafka Pull Request
