--- a/retro-files/config.json
+++ b/retro-files/config.json
@@ -11,3 +11,4 @@ Scalability Testing RabbitMQ OAuth A/B Testing Difficult roads often lead to bea
 React The only way to do great work is to love what you do. Container Orchestration Success usually comes to those who are too busy to be looking for it. Latency Optimization Zero Downtime Deployment To be the best, you must be able to handle the worst. Agile Containerization Neural Networks Replica Set Do what you love and the money will follow.
 I find that the harder I work, the more luck I seem to have. Success is not in what you have, but who you are. Load Balancing Kafka Lambda Functions Predictive Analytics Pull Request Zero Downtime Deployment Scalability Automation
 CI/CD Kafka Replica Set Sharding Opportunities don't happen. You create them. Success doesn’t just find you. You have to go out and get it. Multi-threading Artificial Intelligence
+Kubernetes Quantum Computing Sharding Microservices Multi-threading
