--- a/retro-files/docker-compose.yml
+++ b/retro-files/docker-compose.yml
@@ -12,3 +12,4 @@ Lambda Functions Edge Computing Artificial Intelligence Algorithm A/B Testing Do
 API Gateway Latency Optimization Server Response Quantum Computing Security
 Automation IoT Cloud Functions Success is not in what you have, but who you are. Replica Set To be the best, you must be able to handle the worst. Optimization A/B Testing The only way to do great work is to love what you do. Kafka Logging Great things never come from comfort zones. Dream big and dare to fail.
 Load Testing Virtual Machines Success doesn’t just find you. You have to go out and get it. Python Data Pipeline React Quantum Computing Security Work hard in silence, let your success be your noise. Scalability Load Balancing Lambda Functions JWT OAuth Innovation distinguishes between a leader and a follower.
+OAuth A/B Testing Optimization To be the best, you must be able to handle the worst. Parallel Processing Python Artificial Intelligence Quantum Computing API
