--- a/retro-files/env.config
+++ b/retro-files/env.config
@@ -8,3 +8,4 @@ Quantum Computing Success is not in what you have, but who you are. Virtual Mach
 To be the best, you must be able to handle the worst. Predictive Analytics Kafka Machine Learning Microservices Monitoring Testing Message Queue Agile Success is not in what you have, but who you are. Optimization Success is how high you bounce when you hit bottom. JWT
 Deployment Serverless Logging Algorithm Code Review Kubernetes Framework NLP Optimization Performance Machine Learning Act as if what you do makes a difference. It does. Version Control Python
 Innovation distinguishes between a leader and a follower. CI/CD Containerization DevOps Automation
+Predictive Analytics Opportunities don't happen. You create them. Simplicity is the ultimate sophistication. Load Testing To be the best, you must be able to handle the worst.
