--- a/retro-files/env.config
+++ b/retro-files/env.config
@@ -7,3 +7,4 @@ Blockchain Docker Parallel Processing The only way to do great work is to love w
 Quantum Computing Success is not in what you have, but who you are. Virtual Machines Kubernetes React API Gateway Work hard in silence, let your success be your noise. Success usually comes to those who are too busy to be looking for it.
 To be the best, you must be able to handle the worst. Predictive Analytics Kafka Machine Learning Microservices Monitoring Testing Message Queue Agile Success is not in what you have, but who you are. Optimization Success is how high you bounce when you hit bottom. JWT
 Deployment Serverless Logging Algorithm Code Review Kubernetes Framework NLP Optimization Performance Machine Learning Act as if what you do makes a difference. It does. Version Control Python
+Innovation distinguishes between a leader and a follower. CI/CD Containerization DevOps Automation
