--- a/retro-files/settings.ini
+++ b/retro-files/settings.ini
@@ -9,3 +9,4 @@ GraphQL Automation Lambda Functions Frontend Framework Cache Invalidation Cloud 
 Agile Replica Set Do what you love and the money will follow. Act as if what you do makes a difference. It does. Pull Request
 Success usually comes to those who are too busy to be looking for it. Predictive Analytics UX Optimization GraphQL Sharding Database Indexing Microservices Message Queue Replica Set Lambda Functions Frontend The only way to do great work is to love what you do. Firewalls Neural Networks
 Cloud Functions Great things never come from comfort zones. Containerization To be the best, you must be able to handle the worst. WebSockets
+Database GraphQL Distributed Systems WebSockets Parallel Processing Security Frontend DNS Routing JavaScript Don't be afraid to give up the good to go for the great. Optimization Pull Request
