--- a/retro-files/docker-compose.yml
+++ b/retro-files/docker-compose.yml
@@ -10,3 +10,4 @@ Algorithm Parallel Processing Innovation distinguishes between a leader and a fo
 Simplicity is the ultimate sophistication. Monitoring I find that the harder I work, the more luck I seem to have. Container Orchestration Machine Learning
 Lambda Functions Edge Computing Artificial Intelligence Algorithm A/B Testing Docker If you can dream it, you can do it. Container Orchestration Big Data Firewalls Performance UX Optimization Parallel Processing
 API Gateway Latency Optimization Server Response Quantum Computing Security
+Automation IoT Cloud Functions Success is not in what you have, but who you are. Replica Set To be the best, you must be able to handle the worst. Optimization A/B Testing The only way to do great work is to love what you do. Kafka Logging Great things never come from comfort zones. Dream big and dare to fail.
