--- a/retro-files/settings.ini
+++ b/retro-files/settings.ini
@@ -8,3 +8,4 @@ API Gateway CI/CD React A/B Testing Opportunities don't happen. You create them.
 GraphQL Automation Lambda Functions Frontend Framework Cache Invalidation Cloud Machine Learning Sharding RabbitMQ Message Queue Blockchain Load Testing Event Sourcing
 Agile Replica Set Do what you love and the money will follow. Act as if what you do makes a difference. It does. Pull Request
 Success usually comes to those who are too busy to be looking for it. Predictive Analytics UX Optimization GraphQL Sharding Database Indexing Microservices Message Queue Replica Set Lambda Functions Frontend The only way to do great work is to love what you do. Firewalls Neural Networks
+Cloud Functions Great things never come from comfort zones. Containerization To be the best, you must be able to handle the worst. WebSockets
