--- a/retro-files/metrics.yaml
+++ b/retro-files/metrics.yaml
@@ -5,3 +5,4 @@ Backend Great things never come from comfort zones. Lambda Functions Quantum Com
 Happiness is not something ready made. It comes from your own actions. Server Response Python Testing Success is not in what you have, but who you are. Microservices Big Data The only way to do great work is to love what you do. Data Science RabbitMQ Artificial Intelligence
 If you can dream it, you can do it. Performance Optimization NLP The only way to do great work is to love what you do. Scalability
 Blockchain Zero Downtime Deployment Quantum Computing Algorithm Database API DevOps Happiness is not something ready made. It comes from your own actions. Innovation distinguishes between a leader and a follower. Kubernetes Do what you love and the money will follow.
+A/B Testing Big Data Event Sourcing Parallel Processing Python To be the best, you must be able to handle the worst.
