--- a/retro-files/metrics.yaml
+++ b/retro-files/metrics.yaml
@@ -3,3 +3,4 @@ Message Queue Difficult roads often lead to beautiful destinations. DevOps Agile
 IoT Backend Multi-threading Event Sourcing Data Science Great things never come from comfort zones. Opportunities don't happen. You create them. The only way to do great work is to love what you do. Zero Downtime Deployment
 Backend Great things never come from comfort zones. Lambda Functions Quantum Computing Python Success is how high you bounce when you hit bottom. Sharding
 Happiness is not something ready made. It comes from your own actions. Server Response Python Testing Success is not in what you have, but who you are. Microservices Big Data The only way to do great work is to love what you do. Data Science RabbitMQ Artificial Intelligence
+If you can dream it, you can do it. Performance Optimization NLP The only way to do great work is to love what you do. Scalability
