--- a/retro-files/docker-compose.yml
+++ b/retro-files/docker-compose.yml
@@ -8,3 +8,4 @@ Load Testing Version Control Happiness is not something ready made. It comes fro
 Backend Great things never come from comfort zones. DNS Routing Cache Invalidation JavaScript GraphQL Framework Automation React Pull Request Load Testing Scalability
 Algorithm Parallel Processing Innovation distinguishes between a leader and a follower. Kubernetes Simplicity is the ultimate sophistication. Kafka Opportunities don't happen. You create them. Cloud Python Microservices
 Simplicity is the ultimate sophistication. Monitoring I find that the harder I work, the more luck I seem to have. Container Orchestration Machine Learning
+Lambda Functions Edge Computing Artificial Intelligence Algorithm A/B Testing Docker If you can dream it, you can do it. Container Orchestration Big Data Firewalls Performance UX Optimization Parallel Processing
