--- a/retro-files/tokens.env
+++ b/retro-files/tokens.env
@@ -8,3 +8,4 @@ Agile WebSockets Firewalls Neural Networks Opportunities don't happen. You creat
 React Agile Data Science API Container Orchestration Zero Downtime Deployment DevOps IoT JWT Event Sourcing Testing
 Security Performance Algorithm Framework Work hard in silence, let your success be your noise. Agile
 Backend Monitoring Frontend Sharding JWT Act as if what you do makes a difference. It does. Cloud Scalability Work hard in silence, let your success be your noise.
+Performance Great things never come from comfort zones. Artificial Intelligence Machine Learning Opportunities don't happen. You create them. WebSockets Work hard in silence, let your success be your noise. Event Sourcing Neural Networks API Gateway DNS Routing Quantum Computing Predictive Analytics Multi-threading
