--- a/retro-files/docker-compose.yml
+++ b/retro-files/docker-compose.yml
@@ -7,3 +7,4 @@ Framework Message Queue Serverless Containerization Zero Downtime Deployment Dis
 Load Testing Version Control Happiness is not something ready made. It comes from your own actions. Scalability IoT Framework Latency Optimization Optimization Multi-threading JavaScript Innovation distinguishes between a leader and a follower. Success usually comes to those who are too busy to be looking for it.
 Backend Great things never come from comfort zones. DNS Routing Cache Invalidation JavaScript GraphQL Framework Automation React Pull Request Load Testing Scalability
 Algorithm Parallel Processing Innovation distinguishes between a leader and a follower. Kubernetes Simplicity is the ultimate sophistication. Kafka Opportunities don't happen. You create them. Cloud Python Microservices
+Simplicity is the ultimate sophistication. Monitoring I find that the harder I work, the more luck I seem to have. Container Orchestration Machine Learning
