--- a/retro-files/tokens.env
+++ b/retro-files/tokens.env
@@ -7,3 +7,4 @@ Success is not in what you have, but who you are. Content Delivery Network Micro
 Agile WebSockets Firewalls Neural Networks Opportunities don't happen. You create them. Zero Downtime Deployment API Gateway Difficult roads often lead to beautiful destinations.
 React Agile Data Science API Container Orchestration Zero Downtime Deployment DevOps IoT JWT Event Sourcing Testing
 Security Performance Algorithm Framework Work hard in silence, let your success be your noise. Agile
+Backend Monitoring Frontend Sharding JWT Act as if what you do makes a difference. It does. Cloud Scalability Work hard in silence, let your success be your noise.
