--- a/retro-files/settings.ini
+++ b/retro-files/settings.ini
@@ -7,3 +7,4 @@ Security IoT API Monitoring Cloud
 API Gateway CI/CD React A/B Testing Opportunities don't happen. You create them. Version Control Predictive Analytics Scalability I find that the harder I work, the more luck I seem to have. Virtual Machines Deployment Event Sourcing Python Edge Computing Automation
 GraphQL Automation Lambda Functions Frontend Framework Cache Invalidation Cloud Machine Learning Sharding RabbitMQ Message Queue Blockchain Load Testing Event Sourcing
 Agile Replica Set Do what you love and the money will follow. Act as if what you do makes a difference. It does. Pull Request
+Success usually comes to those who are too busy to be looking for it. Predictive Analytics UX Optimization GraphQL Sharding Database Indexing Microservices Message Queue Replica Set Lambda Functions Frontend The only way to do great work is to love what you do. Firewalls Neural Networks
