--- a/retro-files/config.json
+++ b/retro-files/config.json
@@ -6,3 +6,4 @@ UX Optimization Neural Networks Parallel Processing Do what you love and the mon
 Multi-threading Deployment Optimization Agile API Gateway Data Pipeline I find that the harder I work, the more luck I seem to have. Security
 JWT Distributed Systems Great things never come from comfort zones. Lambda Functions Event-driven Architecture Simplicity is the ultimate sophistication. Algorithm Performance Cloud Server Response Framework Logging Replica Set
 Monitoring IoT Automation Kafka Security Replica Set Dream big and dare to fail. Containerization GraphQL Logging Parallel Processing Scalability JavaScript Do what you love and the money will follow.
+NLP Big Data The only way to do great work is to love what you do. Agile Virtual Machines WebSockets Monitoring Success doesn’t just find you. You have to go out and get it. Latency Optimization Act as if what you do makes a difference. It does.
