--- a/retro-files/config.json
+++ b/retro-files/config.json
@@ -5,3 +5,4 @@ GraphQL Optimization Kubernetes API Gateway Firewalls DevOps CI/CD OAuth IoT Con
 UX Optimization Neural Networks Parallel Processing Do what you love and the money will follow. Firewalls IoT Big Data Server Response Opportunities don't happen. You create them. Predictive Analytics Microservices Don't be afraid to give up the good to go for the great. Optimization Multi-threading Data Science
 Multi-threading Deployment Optimization Agile API Gateway Data Pipeline I find that the harder I work, the more luck I seem to have. Security
 JWT Distributed Systems Great things never come from comfort zones. Lambda Functions Event-driven Architecture Simplicity is the ultimate sophistication. Algorithm Performance Cloud Server Response Framework Logging Replica Set
+Monitoring IoT Automation Kafka Security Replica Set Dream big and dare to fail. Containerization GraphQL Logging Parallel Processing Scalability JavaScript Do what you love and the money will follow.
