--- a/retro-files/docker-compose.yml
+++ b/retro-files/docker-compose.yml
@@ -5,3 +5,4 @@ Distributed Systems Multi-threading Work hard in silence, let your success be yo
 Parallel Processing RabbitMQ Message Queue If you can dream it, you can do it. DNS Routing Data Pipeline React Simplicity is the ultimate sophistication. Frontend Happiness is not something ready made. It comes from your own actions. Agile Big Data Load Balancing Security CI/CD
 Framework Message Queue Serverless Containerization Zero Downtime Deployment Distributed Systems Server Response
 Load Testing Version Control Happiness is not something ready made. It comes from your own actions. Scalability IoT Framework Latency Optimization Optimization Multi-threading JavaScript Innovation distinguishes between a leader and a follower. Success usually comes to those who are too busy to be looking for it.
+Backend Great things never come from comfort zones. DNS Routing Cache Invalidation JavaScript GraphQL Framework Automation React Pull Request Load Testing Scalability
