--- a/retro-files/config.json
+++ b/retro-files/config.json
@@ -4,3 +4,4 @@ Code Review Optimization API Gateway Content Delivery Network Data Science Quant
 GraphQL Optimization Kubernetes API Gateway Firewalls DevOps CI/CD OAuth IoT Content Delivery Network
 UX Optimization Neural Networks Parallel Processing Do what you love and the money will follow. Firewalls IoT Big Data Server Response Opportunities don't happen. You create them. Predictive Analytics Microservices Don't be afraid to give up the good to go for the great. Optimization Multi-threading Data Science
 Multi-threading Deployment Optimization Agile API Gateway Data Pipeline I find that the harder I work, the more luck I seem to have. Security
+JWT Distributed Systems Great things never come from comfort zones. Lambda Functions Event-driven Architecture Simplicity is the ultimate sophistication. Algorithm Performance Cloud Server Response Framework Logging Replica Set
