--- a/retro-files/tokens.env
+++ b/retro-files/tokens.env
@@ -6,3 +6,4 @@ Database Containerization To be the best, you must be able to handle the worst. 
 Success is not in what you have, but who you are. Content Delivery Network Microservices Distributed Systems Replica Set Automation Firewalls Simplicity is the ultimate sophistication. Load Testing Monitoring NLP If you can dream it, you can do it.
 Agile WebSockets Firewalls Neural Networks Opportunities don't happen. You create them. Zero Downtime Deployment API Gateway Difficult roads often lead to beautiful destinations.
 React Agile Data Science API Container Orchestration Zero Downtime Deployment DevOps IoT JWT Event Sourcing Testing
+Security Performance Algorithm Framework Work hard in silence, let your success be your noise. Agile
