--- a/retro-files/settings.ini
+++ b/retro-files/settings.ini
@@ -5,3 +5,4 @@ Backend Data Science Database Indexing DNS Routing Cloud Functions Cloud API Dev
 Neural Networks JavaScript IoT Kubernetes Edge Computing Algorithm Distributed Systems If you can dream it, you can do it. Testing Code Review The only way to do great work is to love what you do. Data Science
 Security IoT API Monitoring Cloud
 API Gateway CI/CD React A/B Testing Opportunities don't happen. You create them. Version Control Predictive Analytics Scalability I find that the harder I work, the more luck I seem to have. Virtual Machines Deployment Event Sourcing Python Edge Computing Automation
+GraphQL Automation Lambda Functions Frontend Framework Cache Invalidation Cloud Machine Learning Sharding RabbitMQ Message Queue Blockchain Load Testing Event Sourcing
