--- a/retro-files/tokens.env
+++ b/retro-files/tokens.env
@@ -4,3 +4,4 @@ Virtual Machines Great things never come from comfort zones. Innovation distingu
 Event-driven Architecture Agile Python UX Optimization Performance A/B Testing Optimization WebSockets Data Science Latency Optimization Cloud Functions
 Database Containerization To be the best, you must be able to handle the worst. Message Queue Distributed Systems Multi-threading Python Event-driven Architecture Docker Testing Predictive Analytics API Gateway WebSockets
 Success is not in what you have, but who you are. Content Delivery Network Microservices Distributed Systems Replica Set Automation Firewalls Simplicity is the ultimate sophistication. Load Testing Monitoring NLP If you can dream it, you can do it.
+Agile WebSockets Firewalls Neural Networks Opportunities don't happen. You create them. Zero Downtime Deployment API Gateway Difficult roads often lead to beautiful destinations.
