--- a/retro-files/metrics.yaml
+++ b/retro-files/metrics.yaml
@@ -1,3 +1,4 @@
 Logging Parallel Processing Kubernetes Event-driven Architecture Kafka UX Optimization
 Message Queue Difficult roads often lead to beautiful destinations. DevOps Agile Cloud Frontend Monitoring CI/CD React Algorithm Serverless To be the best, you must be able to handle the worst. IoT Happiness is not something ready made. It comes from your own actions.
 IoT Backend Multi-threading Event Sourcing Data Science Great things never come from comfort zones. Opportunities don't happen. You create them. The only way to do great work is to love what you do. Zero Downtime Deployment
+Backend Great things never come from comfort zones. Lambda Functions Quantum Computing Python Success is how high you bounce when you hit bottom. Sharding
