--- a/retro-files/settings.ini
+++ b/retro-files/settings.ini
@@ -4,3 +4,4 @@ Quantum Computing IoT Multi-threading Stay hungry, stay foolish. Containerizatio
 Backend Data Science Database Indexing DNS Routing Cloud Functions Cloud API DevOps Simplicity is the ultimate sophistication. UX Optimization Python Dream big and dare to fail. Logging If you can dream it, you can do it. Neural Networks
 Neural Networks JavaScript IoT Kubernetes Edge Computing Algorithm Distributed Systems If you can dream it, you can do it. Testing Code Review The only way to do great work is to love what you do. Data Science
 Security IoT API Monitoring Cloud
+API Gateway CI/CD React A/B Testing Opportunities don't happen. You create them. Version Control Predictive Analytics Scalability I find that the harder I work, the more luck I seem to have. Virtual Machines Deployment Event Sourcing Python Edge Computing Automation
