--- a/retro-files/settings.ini
+++ b/retro-files/settings.ini
@@ -3,3 +3,4 @@ The only way to do great work is to love what you do. Artificial Intelligence A/
 Quantum Computing IoT Multi-threading Stay hungry, stay foolish. Containerization WebSockets CI/CD Security Agile Opportunities don't happen. You create them. OAuth
 Backend Data Science Database Indexing DNS Routing Cloud Functions Cloud API DevOps Simplicity is the ultimate sophistication. UX Optimization Python Dream big and dare to fail. Logging If you can dream it, you can do it. Neural Networks
 Neural Networks JavaScript IoT Kubernetes Edge Computing Algorithm Distributed Systems If you can dream it, you can do it. Testing Code Review The only way to do great work is to love what you do. Data Science
+Security IoT API Monitoring Cloud
