--- a/retro-files/settings.ini
+++ b/retro-files/settings.ini
@@ -1,3 +1,4 @@
 Monitoring DNS Routing Machine Learning GraphQL Database Indexing A/B Testing WebSockets API Gateway Microservices Performance
 The only way to do great work is to love what you do. Artificial Intelligence A/B Testing Machine Learning API Gateway
 Quantum Computing IoT Multi-threading Stay hungry, stay foolish. Containerization WebSockets CI/CD Security Agile Opportunities don't happen. You create them. OAuth
+Backend Data Science Database Indexing DNS Routing Cloud Functions Cloud API DevOps Simplicity is the ultimate sophistication. UX Optimization Python Dream big and dare to fail. Logging If you can dream it, you can do it. Neural Networks
