--- a/retro-files/config.json
+++ b/retro-files/config.json
@@ -3,3 +3,4 @@ Work hard in silence, let your success be your noise. Distributed Systems Fronte
 Code Review Optimization API Gateway Content Delivery Network Data Science Quantum Computing Container Orchestration Innovation distinguishes between a leader and a follower. Message Queue
 GraphQL Optimization Kubernetes API Gateway Firewalls DevOps CI/CD OAuth IoT Content Delivery Network
 UX Optimization Neural Networks Parallel Processing Do what you love and the money will follow. Firewalls IoT Big Data Server Response Opportunities don't happen. You create them. Predictive Analytics Microservices Don't be afraid to give up the good to go for the great. Optimization Multi-threading Data Science
+Multi-threading Deployment Optimization Agile API Gateway Data Pipeline I find that the harder I work, the more luck I seem to have. Security
