--- a/retro-files/tokens.env
+++ b/retro-files/tokens.env
@@ -1,3 +1,4 @@
 Dream big and dare to fail. Cloud Success is not in what you have, but who you are. Success doesn’t just find you. You have to go out and get it. Lambda Functions JWT Event Sourcing Database
 Performance Container Orchestration Content Delivery Network Deployment Load Testing Replica Set Distributed Systems Event-driven Architecture Event Sourcing Framework I find that the harder I work, the more luck I seem to have. Microservices
 Virtual Machines Great things never come from comfort zones. Innovation distinguishes between a leader and a follower. Edge Computing Latency Optimization Python Server Response Success usually comes to those who are too busy to be looking for it. UX Optimization Code Review GraphQL Distributed Systems Frontend Docker Neural Networks
+Event-driven Architecture Agile Python UX Optimization Performance A/B Testing Optimization WebSockets Data Science Latency Optimization Cloud Functions
