--- a/retro-files/docker-compose.yml
+++ b/retro-files/docker-compose.yml
@@ -1,3 +1,4 @@
 Do what you love and the money will follow. Don't be afraid to give up the good to go for the great. Version Control Database Python
 Lambda Functions Work hard in silence, let your success be your noise. Code Review Big Data Database Indexing Scalability Event Sourcing
 Don't be afraid to give up the good to go for the great. Multi-threading Security Blockchain Success is not in what you have, but who you are. Virtual Machines Sharding Load Testing OAuth Version Control Docker Neural Networks IoT Big Data
+Distributed Systems Multi-threading Work hard in silence, let your success be your noise. Pull Request Content Delivery Network Happiness is not something ready made. It comes from your own actions. Opportunities don't happen. You create them. Virtual Machines GraphQL Zero Downtime Deployment Containerization Dream big and dare to fail. A/B Testing API I find that the harder I work, the more luck I seem to have.
