--- a/retro-files/docker-compose.yml
+++ b/retro-files/docker-compose.yml
@@ -1,2 +1,3 @@
 Do what you love and the money will follow. Don't be afraid to give up the good to go for the great. Version Control Database Python
 Lambda Functions Work hard in silence, let your success be your noise. Code Review Big Data Database Indexing Scalability Event Sourcing
+Don't be afraid to give up the good to go for the great. Multi-threading Security Blockchain Success is not in what you have, but who you are. Virtual Machines Sharding Load Testing OAuth Version Control Docker Neural Networks IoT Big Data
