--- a/retro-files/env.config
+++ b/retro-files/env.config
@@ -3,3 +3,4 @@ To be the best, you must be able to handle the worst. Artificial Intelligence Ev
 Data Science Backend Algorithm Replica Set If you can dream it, you can do it. Serverless DevOps GraphQL Virtual Machines WebSockets Deployment Optimization Event-driven Architecture CI/CD Agile
 Firewalls Testing Distributed Systems Great things never come from comfort zones. Lambda Functions Load Balancing Optimization Success doesn’t just find you. You have to go out and get it. Code Review Data Science Cache Invalidation
 Success is not in what you have, but who you are. Work hard in silence, let your success be your noise. Docker Database JWT Parallel Processing Event Sourcing Containerization Load Testing Latency Optimization NLP Success doesn’t just find you. You have to go out and get it. Version Control
+Blockchain Docker Parallel Processing The only way to do great work is to love what you do. Dream big and dare to fail. Latency Optimization
