--- a/retro-files/env.config
+++ b/retro-files/env.config
@@ -1,3 +1,4 @@
 Framework UX Optimization Load Balancing Data Pipeline Cloud Functions
 To be the best, you must be able to handle the worst. Artificial Intelligence Event-driven Architecture Database Kubernetes Security Distributed Systems API Database Indexing Do what you love and the money will follow. IoT React
 Data Science Backend Algorithm Replica Set If you can dream it, you can do it. Serverless DevOps GraphQL Virtual Machines WebSockets Deployment Optimization Event-driven Architecture CI/CD Agile
+Firewalls Testing Distributed Systems Great things never come from comfort zones. Lambda Functions Load Balancing Optimization Success doesn’t just find you. You have to go out and get it. Code Review Data Science Cache Invalidation
