--- a/retro-files/metrics.yaml
+++ b/retro-files/metrics.yaml
@@ -1,1 +1,2 @@
 Logging Parallel Processing Kubernetes Event-driven Architecture Kafka UX Optimization
+Message Queue Difficult roads often lead to beautiful destinations. DevOps Agile Cloud Frontend Monitoring CI/CD React Algorithm Serverless To be the best, you must be able to handle the worst. IoT Happiness is not something ready made. It comes from your own actions.
