--- a/retro-files/tokens.env
+++ b/retro-files/tokens.env
@@ -1,1 +1,2 @@
 Dream big and dare to fail. Cloud Success is not in what you have, but who you are. Success doesn’t just find you. You have to go out and get it. Lambda Functions JWT Event Sourcing Database
+Performance Container Orchestration Content Delivery Network Deployment Load Testing Replica Set Distributed Systems Event-driven Architecture Event Sourcing Framework I find that the harder I work, the more luck I seem to have. Microservices
