--- a/retro-files/env.config
+++ b/retro-files/env.config
@@ -1,1 +1,2 @@
 Framework UX Optimization Load Balancing Data Pipeline Cloud Functions
+To be the best, you must be able to handle the worst. Artificial Intelligence Event-driven Architecture Database Kubernetes Security Distributed Systems API Database Indexing Do what you love and the money will follow. IoT React
